--- a/assets/admin/css/custom.css
+++ b/assets/admin/css/custom.css
@@ -27,7 +27,10 @@ body {
 }
 
 .even {
-	background-color: #eee;
+	background-color: #E8E8E8;
+}
+.odd {
+	background-color: #F5F5F5;
 }
 
 .well {
@@ -68,6 +71,25 @@ td.metric-orange {
 
 .region-title {
 	text-transform: uppercase;
+}
+
+.column-header {
+	font-weight: bold;
+	color: black;
+}
+
+.column-header a {
+	font-weight: bold;
+	color: black;
+}
+
+.lead-name a {
+	padding-left: 0.5em;
+	color: black;
+}
+
+.person {
+	border-bottom: 1px solid #C4C4C4
 }
 
 .person.ng-enter,
