--- a/assets/admin/views/demand.html
+++ b/assets/admin/views/demand.html
@@ -49,7 +49,7 @@
 
     <div class="row" style="padding-top:10px;">
       <div class="col-md-12" style="text-align:right;">
-          <button class="btn btn-default">Bulk Perks</button>
+          <button class="btn btn-default" ng-click="sendBulkPerk()">Bulk Perks</button>
       </div>
     </div>
 
@@ -76,13 +76,13 @@
         <input type="checkbox" />
         <a>{{user.name}}</a>
       </div>
-      <div class="col-md-2" style="font-weight:bold;">
+      <div class="col-md-2">
         {{user.klout}}
       </div>
-      <div class="col-md-2" style="font-weight:bold;">
+      <div class="col-md-2">
         {{user.price|currency}}
       </div>
-      <div class="col-md-2" style="font-weight:bold;">
+      <div class="col-md-2">
         {{user.email}}
       </div>
       <div class="col-md-2" style="text-align:center;">
@@ -95,389 +95,3 @@
   </div>
 </div>
 
-
-<div class="row" style="margin-top:0px;padding-top:0px;">
-  <div class="col-md-8">
-    <h3 class="region-title">Geo Activity</h3>
-
-    <div class="well">
-      <div class="row interior-section" style="padding-bottom:10px;">
-        <div class="col-md-12">
-          <select class="form-control" style="width:25%;display:inline;">
-          <option>USA</option>
-          </select>
-          <img src="images/gear.png" style="float:right;padding-top:3px;">
-        </div>
-      </div>
-      <div class="row" style="padding-top:10px;">
-        <div class="col-md-12" style="text-align:center;">
-          <img src="images/map.png" />
-        </div>
-      </div>
-      <div class="row metric-numbers">
-        <div class="col-md-4">
-          <h4 style="font-weight:normal;">Total Questions
-            <span class="green-number">(+3.4%)</span>
-          </h4>
-        </div>
-        <div class="col-md-4">
-          <h4 style="font-weight:normal;">Total Answers
-            <span class="green-number">(+6.4%)</span>
-          </h4>
-        </div>
-        <div class="col-md-4">
-          <h4 style="font-weight:normal;">Unsolved
-            <span class="green-number">(+2.4%)</span>
-          </h4>
-        </div>
-      </div>
-      <div class="row metric-numbers">
-        <div class="col-md-4">
-          <h4>23</h4>
-        </div>
-        <div class="col-md-4">
-          <h4>48</h4>
-        </div>
-        <div class="col-md-4">
-          <h4>28</h4>
-        </div>
-      </div>
-    </div>
-
-    <h3 class="region-title">Aggregate Product Score</h3>
-
-    <div class="well">
-      <div class="row interior-section" style="padding-bottom:10px;">
-        <div class="col-md-12">
-          <div class="btn-group">
-            <button type="button" class="btn btn-default active">Today</button>
-            <button type="button" class="btn btn-default">Week</button>
-            <button type="button" class="btn btn-default">Month</button>
-          </div>
-          <img src="images/gear.png" style="float:right;padding-top:3px;">
-        </div>
-      </div>
-      <div class="row" style="padding-top:10px;">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-3">
-              <div style="background-color:#333333;width:188px;height:174px;vertical-align:middle;text-align:center;padding-top:25px;">
-                <img src="images/big_85.png">
-              </div>
-              <div style="background-color:#1D9B25;width:188px;height:43px;color:white;vertical-align:middle;text-align:center;line-height:43px;">
-                Highly Recommended
-              </div>
-            </div>
-            <div class="col-md-9" style="padding-left:2em;">
-              <table>
-                <tr>
-                  <td class="metric-orange">Size</td>
-                  <td><img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Weight</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Picture Quality</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png">&nbsp;<img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Audio</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Features</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-              </table>
-              <div style="text-align:right;margin-top:5.5em;">
-                <img src="images/grey_klout.png">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <h3 class="region-title">Ratings Summary</h3>
-
-    <div class="col-md-6 well">
-      <div class="row interior-section" style="padding-bottom:10px;">
-        <div class="col-md-12">
-          <div class="btn-group">
-            <button type="button" class="btn btn-default active">Today</button>
-            <button type="button" class="btn btn-default">Week</button>
-            <button type="button" class="btn btn-default">Month</button>
-          </div>
-          <img src="images/gear.png" style="float:right;padding-top:3px;">
-        </div>
-      </div>
-      <div class="row" style="padding-top:10px;">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-3" style="text-align:center;">
-              <div style="color:#FF9B10;font-size:34px;font-weight:bold;">4.8</div>
-              <div>(12,800)</div>
-            </div>
-            <div class="col-md-9" style="padding-left:2em;">
-              <table>
-                <tr>
-                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"></td>
-                  <td style="padding-left:1em;">
-                    <div style="font-weight:bold;">200</div>
-                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
-                      <div style="background-color:#FF9B10;width:80px;height:11px;position:absolute;">
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/grey_star.png"></td>
-                  <td style="padding-left:1em;">
-                    <div style="font-weight:bold;">800</div>
-                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
-                      <div style="background-color:#FF9B10;width:80px;height:11px;position:absolute;">
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"></td>
-                  <td style="padding-left:1em;">
-                    <div style="font-weight:bold;">200</div>
-                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
-                      <div style="background-color:#FF9B10;width:50px;height:11px;position:absolute;">
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"></td>
-                  <td style="padding-left:1em;">
-                    <div style="font-weight:bold;">85</div>
-                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
-                      <div style="background-color:#FF9B10;width:30px;height:11px;position:absolute;">
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><img src="images/orange_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"></td>
-                  <td style="padding-left:1em;">
-                    <div style="font-weight:bold;">32</div>
-                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
-                      <div style="background-color:#FF9B10;width:20px;height:11px;position:absolute;">
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="col-md-4">
-    <h3 class="region-title">Questions</h3>
-
-    <div class="well">
-      <div class="row interior-section" style="padding-bottom:10px;">
-        <div class="col-md-12">
-          <div class="btn-group">
-            <select class="form-control" style="width:100%;display:inline;">
-              <option>in last hour</option>
-            </select>
-          </div>
-          <img src="images/gear.png" style="float:right;padding-top:3px;">
-        </div>
-      </div>
-      <div class="row interior-section" style="padding-top:10px;">
-        <div class="col-md-12">
-
-          <activity icon="peter" first="Peter" last="Parker" name="Peter Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-            <div class="post">
-              How many HDMI ports are on the back?
-            </div>
-            <div class="response">
-              There are four ports.
-            </div>
-          </activity>
-
-        </div>
-      </div>
-      <div class="row interior-section" style="padding-top:10px;">
-        <div class="col-md-12">
-
-          <activity icon="gwen" first="Gwen" last="Stacy" name="Gwen Stacy" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
-            <div class="post">
-              <img src="images/room1.png">
-              <p>Is there a digital tuner in this unit?</p>
-            </div>
-            <div class="response">
-              No. You need to have Cable, Satellite or your own Tuner. I suggest looking at Best Buy...
-            </div>
-          </activity>
-
-        </div>
-      </div>
-      <div class="row interior-section" style="padding-top:10px;">
-        <div class="col-md-12">
-
-          <activity icon="harry" first="Harry" last="Osborn" name="Harry Osborn" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-            <div class="post">
-              <p>What do you recommend for a Sound bar?</p>
-            </div>
-            <div class="response">
-              I'm a big fan of the companion Sony HTCT370 as well as any Sonos unit.
-            </div>
-          </activity>
-
-        </div>
-      </div>
-      <div class="row interior-section" style="padding-top:10px;">
-        <div class="col-md-12">
-
-          <activity icon="may" first="Mary" last="Parker" name="Mary Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-            <div class="post">
-              <img src="images/room2.png">
-              <p>What is the best wall mount for the 55"?</p>
-            </div>
-            <div class="response">
-              Sanus Mounts are the best for the money. Amazon has the best prices.
-            </div>
-          </activity>
-
-        </div>
-      </div>
-        <div class="row" style="padding-top:10px;">
-          <div class="col-md-12" style="text-align:center;">
-            <button class="btn btn-default">More</button>
-          </div>
-         </div>
-    </div>
-
-  </div>
-</div>
-
-
-
-
-
-<script type="text/ng-template" id="myModalContent.html">
-    <div class="modal-header">
-        <h3 class="modal-title">
-        {{user.name}}
-          <span style="float:right"><img src="images/klout_lg.png"></span>
-        </h3>
-    </div>
-    <div class="modal-body">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-1">
-            <div style="position:relative;height:85px;width:85px;">
-              <img src="images/peter_lg.png" height="80" width="80" style="position:absolute;top:0px;left:5px;">
-              <img src="images/klout_bubble.png" style="position:absolute;top:45px;left:0px;">
-              <span style="position:absolute;top:48px;left:7px;font-size:15px;color:white;">
-                {{user.klout}}
-              </span>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div style="font-weight:bold">{{user.name}}</div>
-            <div>
-            Change agent and nice guy. Currently dating @gwenstacy. (All opinions my own)
-            </div>
-            <div>
-              <img src="images/shield.png" style="margin-right:0.5em;">
-              <img src="images/shield.png" style="margin-right:0.5em;">
-              <img src="images/shield.png" style="margin-right:0.5em;">
-            </div>
-          </div>
-        </div>
-
-        <div class="row" style="margin-top:0.5em;" ng-hide="perksMode">
-          <div class="col-md-3">
-            <div style="font-weight:bold;">
-              <span style="color:#E67D69;">+K&apos;s</span>
-              23
-            </div>
-            <div style="font-size:small;">
-              Sell All
-            </div>
-            <div style="margin-top:0.5em;font-weight:bold;">
-              <span style="color:#E67D69;">Wants</span>
-              45
-            </div>
-            <div>
-              Sony 55&quot; Class XBR...
-            </div>
-            <div>
-              Leica T Camera
-            </div>
-            <div>
-              Nike Free 3.0 2014
-            </div>
-            <div style="font-size:small;">
-              See All
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div style="font-weight:bold;">
-              <span style="color:#E67D69;">Sony products owned</span>
-              5
-            </div>
-            <div>
-              Bravia 46&quot; 4K
-            </div>
-            <div>
-              PS4
-            </div>
-            <div>
-              PS3
-            </div>
-            <div style="font-size:small;">
-              See All
-            </div>
-          </div>
-        </div>
-
-        <div class="row" style="margin-top:0.5em;" ng-show="perksMode">
-          <div class="col-md-1" style="padding-top:2em;">
-            <strong style="font-size:large;"><span style="color:#E67D69;">Perks</span> 2</strong>
-          </div>
-
-          <div class="col-md-2">
-            <div style="text-align:center;border-radius:10px;vertical-align:middle;height:132px;width:125px;line-height:130px;border:1px solid #ccc;">
-              <img src="images/headphones.png" />
-            </div>
-            <div>
-              <input type="checkbox" style="float:left;height:20px;margin-right:5px;" checked>
-              <div style="padding-top:5px;float:left;">MDR-HW300K<br/>Stereo Headphones</div>
-            </div>
-         </div>
-
-          <div class="col-md-2">
-            <div style="text-align:center;border-radius:10px;vertical-align:middle;height:132px;width:125px;line-height:130px;border:1px solid #ccc;">
-              <img src="images/coins.png" />
-            </div>
-            <div>
-              <input type="checkbox" style="float:left;height:20px;margin-right:5px;">
-              <div style="padding-top:5px;">$15.00 off</div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-default" ng-click="ok()">View Profile</button>
-        <button class="btn btn-info" ng-click="sendPerk()" ng-hide="perksMode"><img src="images/klout.png"> Send Perk</button>
-        <button class="btn btn-info" ng-show="perksMode"><img src="images/klout.png"> Perk Him</button>
-    </div>
-</script>
