--- a/assets/admin/views/home.html
+++ b/assets/admin/views/home.html
@@ -1,71 +1,278 @@
-<div class="row">
-  <div class="col-md-8">
-    <h4 style="border-bottom:1px solid #ccc;padding-bottom:0.25em;">Wants ({{last30.wants}})</h4>
-      <highchart id="activityChart" config="activityChartConfig" style="height:200px;"></highchart>
-  	<h4 style="border-bottom:1px solid #ccc;padding-bottom:0.25em;">Reviews ({{last30.total_stars}})</h4>
-  	<table style="margin-bottom:2em;">
-  		<tr>
-  			<td><img src="images/star.png"><img src="images/star.png"><img src="images/star.png"><img src="images/star.png"><img src="images/star.png"></td>
-  			<td>{{last30.stars.5}}</td>
-  		</tr>
-  		<tr>
-  			<td><img src="images/star.png"><img src="images/star.png"><img src="images/star.png"><img src="images/star.png"></td>
-  			<td>{{last30.stars.4}}</td>
-  		</tr>
-  		<tr>
-  			<td><img src="images/star.png"><img src="images/star.png"><img src="images/star.png"></td>
-  			<td>{{last30.stars.3}}</td>
-  		</tr>
-  		<tr>
-  			<td><img src="images/star.png"><img src="images/star.png"></td>
-  			<td>{{last30.stars.2}}</td>
-  		</tr>
-  		<tr>
-  			<td><img src="images/star.png"></td>
-  			<td>{{last30.stars.1}}</td>
-  		</tr>
-  	</table>
-    <h4 style="border-bottom:1px solid #ccc;padding-bottom:0.25em;">Questions + Answers ({{last30.qa_total_questions}})</h4>
-    <p>Answers ({{last30.qa_total}})</p>
-    <p>Solved ({{last30.qa_solved_pct}}%)</p>
-  	<p>Unsolved ({{last30.qa_total_questions-last30.qa_solved}})</p>
+<div class="row" style="padding-left:1em;padding-right:1em;margin-bottom:0px;">
+  <div class="col-md-12">
+  <h3 class="region-title">Wants</h3>
   </div>
+  <div class="col-md-12 well">
+    <div class="row" style="padding-top:10px;padding-bottom:10px;">
+      <div class="col-md-12">
+        <highchart style="height:250px;" id="activityChart" config="activityChartConfig"></highchart>
+      </div>
+    </div>
+</div>
+
+<div class="row" style="margin-top:0px;padding-top:0px;">
+  <div class="col-md-8">
+    <h3 class="region-title">Geo Activity</h3>
+
+    <div class="well">
+      <div class="row interior-section" style="padding-bottom:10px;">
+        <div class="col-md-12">
+          <select class="form-control" style="width:25%;display:inline;">
+          <option>USA</option>
+          </select>
+          <img src="images/gear.png" style="float:right;padding-top:3px;">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px;">
+        <div class="col-md-12" style="text-align:center;">
+          <img src="images/map.png" />
+        </div>
+      </div>
+      <div class="row metric-numbers">
+        <div class="col-md-4">
+          <h4 style="font-weight:normal;">Total Questions
+            <span class="green-number">(+3.4%)</span>
+          </h4>
+        </div>
+        <div class="col-md-4">
+          <h4 style="font-weight:normal;">Total Answers
+            <span class="green-number">(+6.4%)</span>
+          </h4>
+        </div>
+        <div class="col-md-4">
+          <h4 style="font-weight:normal;">Unsolved
+            <span class="green-number">(+2.4%)</span>
+          </h4>
+        </div>
+      </div>
+      <div class="row metric-numbers">
+        <div class="col-md-4">
+          <h4>23</h4>
+        </div>
+        <div class="col-md-4">
+          <h4>48</h4>
+        </div>
+        <div class="col-md-4">
+          <h4>28</h4>
+        </div>
+      </div>
+    </div>
+
+    <h3 class="region-title">Aggregate Product Score</h3>
+
+    <div class="well">
+      <div class="row interior-section" style="padding-bottom:10px;">
+        <div class="col-md-12">
+          <div class="btn-group">
+            <button type="button" class="btn btn-default active">Today</button>
+            <button type="button" class="btn btn-default">Week</button>
+            <button type="button" class="btn btn-default">Month</button>
+          </div>
+          <img src="images/gear.png" style="float:right;padding-top:3px;">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px;">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-3">
+              <div style="background-color:#333333;width:188px;height:174px;vertical-align:middle;text-align:center;padding-top:25px;">
+                <img src="images/big_85.png">
+              </div>
+              <div style="background-color:#1D9B25;width:188px;height:43px;color:white;vertical-align:middle;text-align:center;line-height:43px;">
+                Highly Recommended
+              </div>
+            </div>
+            <div class="col-md-9" style="padding-left:2em;">
+              <table>
+                <tr>
+                  <td class="metric-orange">Size</td>
+                  <td><img src="images/bar.png"></td>
+                </tr>
+                <tr>
+                  <td class="metric-orange">Weight</td>
+                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
+                </tr>
+                <tr>
+                  <td class="metric-orange">Picture Quality</td>
+                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png">&nbsp;<img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
+                </tr>
+                <tr>
+                  <td class="metric-orange">Audio</td>
+                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
+                </tr>
+                <tr>
+                  <td class="metric-orange">Features</td>
+                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
+                </tr>
+              </table>
+              <div style="text-align:right;margin-top:5.5em;">
+                <img src="images/grey_klout.png">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h3 class="region-title">Ratings Summary</h3>
+
+    <div class="col-md-6 well">
+      <div class="row interior-section" style="padding-bottom:10px;">
+        <div class="col-md-12">
+          <div class="btn-group">
+            <button type="button" class="btn btn-default active">Today</button>
+            <button type="button" class="btn btn-default">Week</button>
+            <button type="button" class="btn btn-default">Month</button>
+          </div>
+          <img src="images/gear.png" style="float:right;padding-top:3px;">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px;">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-3" style="text-align:center;">
+              <div style="color:#FF9B10;font-size:34px;font-weight:bold;">4.8</div>
+              <div>(12,800)</div>
+            </div>
+            <div class="col-md-9" style="padding-left:2em;">
+              <table>
+                <tr>
+                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"></td>
+                  <td style="padding-left:1em;">
+                    <div style="font-weight:bold;">200</div>
+                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
+                      <div style="background-color:#FF9B10;width:80px;height:11px;position:absolute;">
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/grey_star.png"></td>
+                  <td style="padding-left:1em;">
+                    <div style="font-weight:bold;">800</div>
+                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
+                      <div style="background-color:#FF9B10;width:80px;height:11px;position:absolute;">
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"></td>
+                  <td style="padding-left:1em;">
+                    <div style="font-weight:bold;">200</div>
+                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
+                      <div style="background-color:#FF9B10;width:50px;height:11px;position:absolute;">
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/orange_star.png"><img src="images/orange_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"></td>
+                  <td style="padding-left:1em;">
+                    <div style="font-weight:bold;">85</div>
+                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
+                      <div style="background-color:#FF9B10;width:30px;height:11px;position:absolute;">
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="images/orange_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"><img src="images/grey_star.png"></td>
+                  <td style="padding-left:1em;">
+                    <div style="font-weight:bold;">32</div>
+                    <div style="background-color:#333333;width:120px;height:11px;position:relative;">
+                      <div style="background-color:#FF9B10;width:20px;height:11px;position:absolute;">
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
   <div class="col-md-4">
-  <h4>Recent Activity</h4>
-    <p><i style="font-size:small;">Updated 2 minutes ago</i></p>
-    <activity icon="peter" name="Peter Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-      <div class="post">
-        How many HDMI ports are on the back?
+    <h3 class="region-title">Questions</h3>
+
+    <div class="well">
+      <div class="row interior-section" style="padding-bottom:10px;">
+        <div class="col-md-12">
+          <div class="btn-group">
+            <select class="form-control" style="width:100%;display:inline;">
+              <option>in last hour</option>
+            </select>
+          </div>
+          <img src="images/gear.png" style="float:right;padding-top:3px;">
+        </div>
       </div>
-      <div class="response">
-        There are four ports.
+      <div class="row interior-section" style="padding-top:10px;">
+        <div class="col-md-12">
+
+          <activity icon="peter" first="Peter" last="Parker" name="Peter Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
+            <div class="post">
+              How many HDMI ports are on the back?
+            </div>
+            <div class="response">
+              There are four ports.
+            </div>
+          </activity>
+
+        </div>
       </div>
-    </activity>
-    <activity icon="gwen" name="Gwen Stacy" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
-      <div class="post">
-        <img src="images/room1.png">
-        <p>Is there a digital tuner in this unit?</p>
+      <div class="row interior-section" style="padding-top:10px;">
+        <div class="col-md-12">
+
+          <activity icon="gwen" first="Gwen" last="Stacy" name="Gwen Stacy" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
+            <div class="post">
+              <img src="images/room1.png">
+              <p>Is there a digital tuner in this unit?</p>
+            </div>
+            <div class="response">
+              No. You need to have Cable, Satellite or your own Tuner. I suggest looking at Best Buy...
+            </div>
+          </activity>
+
+        </div>
       </div>
-      <div class="response">
-        No. You need to have Cable, Satellite or your own Tuner. I suggest looking at Best Buy...
+      <div class="row interior-section" style="padding-top:10px;">
+        <div class="col-md-12">
+
+          <activity icon="harry" first="Harry" last="Osborn" name="Harry Osborn" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
+            <div class="post">
+              <p>What do you recommend for a Sound bar?</p>
+            </div>
+            <div class="response">
+              I'm a big fan of the companion Sony HTCT370 as well as any Sonos unit.
+            </div>
+          </activity>
+
+        </div>
       </div>
-    </activity>
-    <activity icon="harry" name="Harry Osborn" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-      <div class="post">
-        <p>What do you recommend for a Sound bar?</p>
+      <div class="row interior-section" style="padding-top:10px;">
+        <div class="col-md-12">
+
+          <activity icon="may" first="Mary" last="Parker" name="Mary Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
+            <div class="post">
+              <img src="images/room2.png">
+              <p>What is the best wall mount for the 55"?</p>
+            </div>
+            <div class="response">
+              Sanus Mounts are the best for the money. Amazon has the best prices.
+            </div>
+          </activity>
+
+        </div>
       </div>
-      <div class="response">
-        I'm a big fan of the companion Sony HTCT370 as well as any Sonos unit.
-      </div>
-    </activity>
-    <activity icon="may" name="Mary Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-      <div class="post">
-        <img src="images/room2.png">
-        <p>What is the best wall mount for the 55"?</p>
-      </div>
-      <div class="response">
-        Sanus Mounts are the best for the money. Amazon has the best prices.
-      </div>
-    </activity>
+        <div class="row" style="padding-top:10px;">
+          <div class="col-md-12" style="text-align:center;">
+            <button class="btn btn-default">More</button>
+          </div>
+         </div>
+    </div>
+
   </div>
 </div>
