New klout buttons

--- a/assets/admin/views/demand.html
+++ b/assets/admin/views/demand.html
@@ -49,7 +49,10 @@
 
     <div class="row" style="padding-top:10px;">
       <div class="col-md-12" style="text-align:right;">
-          <button class="btn btn-default" ng-click="sendBulkPerk()">Bulk Perks</button>
+          <button class="btn btn-default" ng-click="sendBulkPerk()">
+            <img src="images/klout.png">
+            Bulk Perks
+          </button>
       </div>
     </div>
 
@@ -86,7 +89,7 @@
         {{user.email}}
       </div>
       <div class="col-md-2" style="text-align:center;">
-        <button class="btn btn-xs">
+        <button class="btn btn-default btn-xs">
           <img src="images/klout.png">
           Send Perk
         </button>
