--- a/assets/lithium/styles-desktop.css
+++ b/assets/lithium/styles-desktop.css
@@ -100,7 +100,6 @@ body#ws-product .sny-product-header.sny-hdr-stuck {
 
 .bottom-header > div {
   display: inline-block;
-  margin-right: 75px;
   vertical-align: top;
 }
 
@@ -111,6 +110,14 @@ body#ws-product .sny-product-header.sny-hdr-stuck {
 .bottom-header > div.stars {
   color: #e8112c;
   font-size: 20px;
+}
+.bottom-header > div.stars > a {
+  font-size: 16px;
+  margin-left: 5px;
+  margin-right: 15px;
+}
+.bottom-header > div.wants-button-elm {
+    margin-left: 50px;
 }
 
 /**
