--- a/assets/admin/views/home.html
+++ b/assets/admin/views/home.html
@@ -60,7 +60,7 @@
 
     <h3 class="region-title">Aggregate Product Score</h3>
 
-    <div class="well">
+    <div class="well" style="padding-bottom:0px;margin-bottom:0px;">
       <div class="row interior-section" style="padding-bottom:10px;">
         <div class="col-md-12">
           <div class="btn-group">
@@ -71,8 +71,8 @@
           <img src="images/gear.png" style="float:right;padding-top:3px;">
         </div>
       </div>
-      <div class="row" style="padding-top:10px;">
-        <div class="col-md-12">
+      <div class="row" style="padding-top:10px;background-color:white;">
+        <div class="col-md-12" style="background-color:white;margin-bottom:0px;padding-bottom:20px;">
           <div class="row">
             <div class="col-md-3">
               <div style="background-color:#333333;width:188px;height:174px;vertical-align:middle;text-align:center;padding-top:25px;">
@@ -209,7 +209,7 @@
           <img src="images/gear.png" style="float:right;padding-top:3px;">
         </div>
       </div>
-      <div class="row interior-section" style="padding-top:10px;">
+      <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
           <activity icon="peter" first="Peter" last="Parker" name="Peter Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
@@ -223,7 +223,7 @@
 
         </div>
       </div>
-      <div class="row interior-section" style="padding-top:10px;">
+      <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
           <activity icon="gwen" first="Gwen" last="Stacy" name="Gwen Stacy" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
@@ -238,7 +238,7 @@
 
         </div>
       </div>
-      <div class="row interior-section" style="padding-top:10px;">
+      <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
           <activity icon="harry" first="Harry" last="Osborn" name="Harry Osborn" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
@@ -252,7 +252,7 @@
 
         </div>
       </div>
-      <div class="row interior-section" style="padding-top:10px;">
+      <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
           <activity icon="may" first="Mary" last="Parker" name="Mary Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
